--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -183,6 +183,7 @@
         <activity
             android:name=".ui.activity.BloggerDashboardActivity"
             android:label="@string/app_name"
+            android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.nnn" />
 
@@ -343,10 +344,6 @@
             android:theme="@style/Theme.Transparent"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".ui.activity.LandingLoginActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Transparent" />
-        <activity
             android:name=".ui.activity.YouTubeVideoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent"
@@ -439,14 +436,6 @@
             android:windowSoftInputMode="adjustPan" />
 
         <activity
-            android:name=".ui.activity.JoinFamilyActivity"
-            android:configChanges="keyboardHidden|screenSize|orientation|screenLayout|uiMode|keyboard"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/transparent_status"
-            android:windowSoftInputMode="adjustPan" />
-
-        <activity
             android:name=".editor.EditorPostActivity"
             android:screenOrientation="portrait"
             android:theme="@style/EditorTheme" />
@@ -485,10 +474,10 @@
         </activity>
         <activity
             android:name=".ui.activity.BookmarkListActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.EditProfieActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.TopicsFilterActivity"
             android:screenOrientation="portrait" />
@@ -503,6 +492,9 @@
 
         <activity
             android:name=".ui.activity.FilteredTopicsArticleListingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.FollowersAndFollowingListActivity"
             android:screenOrientation="portrait" />
 
         <receiver
