--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
 
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'org.apache.httpcomponents:httpmime:4.5'
 
     compile 'com.google.android.gms:play-services-maps:9.0.0'
@@ -38,11 +38,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.0.0'
     compile 'com.google.android.gms:play-services-plus:9.0.0'
 
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:design:24.1.1'
+    compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     //    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
