--- a/MyCity4Kids/WordPressEditor/build.gradle
+++ b/MyCity4Kids/WordPressEditor/build.gradle
@@ -47,6 +47,7 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'org.wordpress:utils:1.9.0'
 
     // Test libraries
