--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -120,7 +120,7 @@
             android:icon="@drawable/myicon"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppBaseTheme">
+            android:theme="@style/transparent_status">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -440,10 +440,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/EditorTheme" />
         <activity
-            android:name=".editor.DraftListViewActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.nnn" />
-        <activity
             android:name=".editor.SetupBlogPageActivity"
             android:screenOrientation="portrait" />
         <activity
@@ -454,9 +450,11 @@
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Dialog" />
-        <activity android:name=".ui.activity.SettingsActivity"
+        <activity
+            android:name=".ui.activity.SettingsActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".ui.activity.ContributorListActivity"
+        <activity
+            android:name=".ui.activity.ContributorListActivity"
             android:screenOrientation="portrait"></activity>
         <!--<activity-->
         <!--android:name="com.mycity4kids.ui.activity.EventsFilterActivity"-->
