--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="40"
-    android:versionName="5.2">
+    android:versionCode="41"
+    android:versionName="5.2.1">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -109,6 +109,7 @@
             <!--The following intent filter is added to provide deep linking to the MC4K app  -->
             <intent-filter android:autoVerify="true">
                 <data android:scheme="mc4k" />
+                <data android:scheme="mck" />
                 <data android:scheme="mycity4kids" />
                 <data
                     android:host="www.mycity4kids.com"
