--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="42"
-    android:versionName="5.3">
+    android:versionCode="44"
+    android:versionName="5.4">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -470,6 +470,16 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.FollowersAndFollowingListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.TopicsSplashActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name=".ui.activity.ConfirmFollowedTopicsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.FollowedTopicsListingActivity"
             android:screenOrientation="portrait" />
 
         <receiver
