--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mycity4kids"
-    android:versionCode="51"
-    android:versionName="5.6.2">
+    android:versionCode="52"
+    android:versionName="5.6.3">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -515,6 +515,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.UploadVideoFLActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.IdTokenLoginActivity"
             android:screenOrientation="portrait" />
 
         <receiver
