--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -94,9 +94,6 @@
         </activity>
 
         <activity
-            android:name=".ui.activity.CreateFamilyActivity"
-            android:screenOrientation="portrait" />
-        <activity
             android:name=".ui.activity.SplashActivity"
             android:icon="@drawable/myicon"
             android:label="@string/app_name"
@@ -536,6 +533,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.ArticleDetailsContainerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.RankingActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.BlogSetupActivity"
