--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -20,7 +20,7 @@ dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     //    compile project(':google-play-services_lib')
     //    compile ('com.facebook.android:facebook-android-sdk:3.23.1')
-    compile project(':facebook-android-sdk-3.6.0')
+//    compile project(':facebook-android-sdk-3.6.0')
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
     // Dependency for Google Sign-In
@@ -69,6 +69,7 @@ dependencies {
     compile 'commons-io:commons-io:2.4'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'q.rorbin:badgeview:1.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 //dependencies {
