--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.google.android.gms:play-services-analytics:10.0.1'
     compile 'com.google.android.gms:play-services-auth:10.0.1'
+    compile 'com.google.android.gms:play-services-ads:10.0.1'
     compile 'com.android.support:design:25.3.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
