--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -31,8 +31,8 @@ dependencies {
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
 //    compile project(':progressviewslib')
-    compile 'com.google.android.gms:play-services-plus:10.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.android.gms:play-services-plus:10.0.1'
     compile 'com.android.support:appcompat-v7:25.3.0'
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     compile 'com.google.android.gms:play-services-gcm:10.0.1'
@@ -71,6 +71,7 @@ dependencies {
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.facebook.android:audience-network-sdk:4.+'
 }
 
 //dependencies {
