--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
     compile 'q.rorbin:badgeview:1.1.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-    compile 'com.facebook.android:audience-network-sdk:4.+'
+    compile 'com.facebook.android:audience-network-sdk:4.27.0'
 }
 
 //dependencies {
