--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -396,6 +396,13 @@
         <activity
             android:name=".ui.activity.LanguageSelectionActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.AddShortStoryActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".ui.activity.ShortStoryContainerActivity"
+            android:screenOrientation="portrait" />
 
         <receiver
             android:name="com.mycity4kids.reminders.BootCompleteReceiver"
