--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -31,7 +31,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-
     !-- Maps API needs OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -72,7 +71,7 @@
             android:value="@string/ACCOUNT_KIT_CLIENT_TOKEN" />
 
         <receiver
-            android:name="com.mycity4kids.receiver.InstallReferrerReceiver"
+            android:name=".receiver.InstallReferrerReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
@@ -95,37 +94,41 @@
             </intent-filter>
         </activity>
 
-
-        <!--<activity-->
-        <!--android:name=".LauncherActivity"-->
-        <!--android:label="@string/app_name"-->
-        <!--android:launchMode="singleTask"-->
-        <!--android:theme="@style/AppTheme.NoActionBar">-->
-
-        <!--<intent-filter>-->
-        <!--<action android:name="android.intent.action.MAIN" />-->
-        <!--<category android:name="android.intent.category.LAUNCHER" />-->
-        <!--</intent-filter>-->
-
-        <!--&lt;!&ndash; Branch URI Scheme &ndash;&gt;-->
-        <!--<intent-filter>-->
-        <!--<data android:scheme="androidexample" />-->
-        <!--<action android:name="android.intent.action.VIEW" />-->
-
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
-        <!--<category android:name="android.intent.category.BROWSABLE" />-->
-        <!--</intent-filter>-->
-
-        <!--&lt;!&ndash; Branch App Links (optional) &ndash;&gt;-->
-        <!--<intent-filter android:autoVerify="true">-->
-        <!--<action android:name="android.intent.action.VIEW" />-->
-
-        <!--<category android:name="android.intent.category.DEFAULT" />-->
-        <!--<category android:name="android.intent.category.BROWSABLE" />-->
+        <!-- <activity -->
+        <!-- android:name=".LauncherActivity" -->
+        <!-- android:label="@string/app_name" -->
+        <!-- android:launchMode="singleTask" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar"> -->
 
 
-        <!--</intent-filter>-->
-        <!--</activity>-->
+        <!-- <intent-filter> -->
+        <!-- <action android:name="android.intent.action.MAIN" /> -->
+        <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+        <!-- </intent-filter> -->
+
+
+        <!-- &lt;!&ndash; Branch URI Scheme &ndash;&gt; -->
+        <!-- <intent-filter> -->
+        <!-- <data android:scheme="androidexample" /> -->
+        <!-- <action android:name="android.intent.action.VIEW" /> -->
+
+
+        <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+        <!-- <category android:name="android.intent.category.BROWSABLE" /> -->
+        <!-- </intent-filter> -->
+
+
+        <!-- &lt;!&ndash; Branch App Links (optional) &ndash;&gt; -->
+        <!-- <intent-filter android:autoVerify="true"> -->
+        <!-- <action android:name="android.intent.action.VIEW" /> -->
+
+
+        <!-- <category android:name="android.intent.category.DEFAULT" /> -->
+        <!-- <category android:name="android.intent.category.BROWSABLE" /> -->
+
+
+        <!-- </intent-filter> -->
+        <!-- </activity> -->
 
         <activity
             android:name=".ui.activity.SplashActivity"
@@ -133,11 +136,6 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/transparent_status">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
             <!-- The following intent filter is added to provide deep linking to the MC4K app -->
             <intent-filter android:autoVerify="true">
@@ -185,7 +183,6 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
 
         <!-- Login Activity for facebook & app id -->
         <activity
@@ -478,7 +475,6 @@
         <activity
             android:name=".ui.activity.ExploreArticleListingTypeActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.activity.ShortStoriesListingContainerActivity"
             android:screenOrientation="portrait" />
@@ -527,11 +523,9 @@
         <activity
             android:name=".ui.activity.CategoryVideosListingActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.activity.ChooseVideoCategoryActivity"
             android:screenOrientation="portrait" />
-
 
         <meta-data
             android:name="io.branch.sdk.BranchKey"
@@ -543,6 +537,7 @@
             android:name="io.branch.sdk.TestMode"
             android:value="false" /> <!-- Set to true to use Branch_Test_Key -->
 
+
         <!-- Branch install referrer tracking (optional) -->
         <receiver
             android:name="io.branch.referral.InstallListener"
@@ -551,10 +546,8 @@
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
-
-
         <receiver
-            android:name="com.mycity4kids.reminders.BootCompleteReceiver"
+            android:name=".reminders.BootCompleteReceiver"
             android:enabled="true"
             android:exported="false"
             android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
@@ -568,12 +561,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
 
-        <receiver android:name="com.mycity4kids.reminders.CancelNotificationReceiver" />
+        <receiver android:name=".reminders.CancelNotificationReceiver" />
 
-        <!-- <service android:name="com.mycity4kids.gcm.GcmIntentService" />-->
-        <service android:name="com.mycity4kids.sync.PushTokenService" />
-        <service android:name="com.mycity4kids.sync.SyncUserInfoService" />
-        <service android:name="com.mycity4kids.tts.ReadArticleService" />
+        <!-- <service android:name="com.mycity4kids.gcm.GcmIntentService" /> -->
+        <service android:name=".sync.PushTokenService" />
+        <service android:name=".sync.SyncUserInfoService" />
+        <service android:name=".tts.ReadArticleService" />
 
         <receiver
             android:name="com.google.android.gms.analytics.AnalyticsReceiver"
@@ -639,6 +632,13 @@
             </intent-filter>
         </receiver>
 
+        <activity android:name=".ui.rewards.RewardsContainerActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
