--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     compile fileTree(include: '*.jar', dir: 'libs')
     //    compile project(':google-play-services_lib')
     //    compile ('com.facebook.android:facebook-android-sdk:3.23.1')
@@ -93,6 +94,7 @@ dependencies {
     compile 'com.googlecode.mp4parser:isoparser:1.1.20'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
     compile 'io.branch.sdk.android:library:3.+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 //dependencies {
@@ -155,7 +157,6 @@ android {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE'
         exclude 'META-INF/NOTICE.txt'
-
     }
     buildTypes {
         release {
@@ -173,6 +174,8 @@ android {
     }
 }
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 configurations.all {
     resolutionStrategy.eachDependency { DependencyResolveDetails details ->
         def requested = details.requested
