--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -34,70 +34,70 @@ dependencies {
     compile project(':laser-native-editor')
     compile files('libs/comscore.jar')
 //    compile project(':progressviewslib')
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.android.support:appcompat-v7:25.3.0'
-    compile 'com.google.android.gms:play-services-plus:15.0.1'
-    compile 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:appcompat-v7:25.3.0'
+    implementation 'com.google.android.gms:play-services-plus:15.0.1'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-gcm:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.1'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:15.0.1'
     compile 'com.google.android.gms:play-services-gcm:15.0.1'
-    compile 'com.google.android.gms:play-services-location:15.0.1'
-    compile 'com.google.android.gms:play-services-analytics:16.0.1'
-    compile 'com.google.android.gms:play-services-auth:15.0.1'
-    compile 'com.google.android.gms:play-services-ads:15.0.1'
-    compile 'com.google.android.gms:play-services-gcm:15.0.1'
-    compile 'com.google.firebase:firebase-appindexing:16.0.1'
-    compile 'com.google.firebase:firebase-messaging:17.1.0'
-    compile 'com.google.firebase:firebase-core:16.0.1'
-    compile 'com.google.firebase:firebase-storage:16.0.1'
-    compile 'com.google.firebase:firebase-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-appindexing:16.0.1'
+    implementation 'com.google.firebase:firebase-messaging:17.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    implementation 'com.google.firebase:firebase-storage:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.0.1'
 
-    compile 'com.android.support:design:25.3.0'
-    compile 'com.android.support:cardview-v7:25.3.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.mikhaellopez:circularimageview:3.0.2'
-    compile 'com.facebook.shimmer:shimmer:0.1.0@aar'
+    implementation 'com.android.support:design:25.3.0'
+    implementation 'com.android.support:cardview-v7:25.3.0'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.support:recyclerview-v7:25.3.1'
+    implementation 'com.mikhaellopez:circularimageview:3.0.2'
+    implementation 'com.facebook.shimmer:shimmer:0.1.0@aar'
 
-    compile 'com.google.api-client:google-api-client:1.20.0'
-    compile 'com.google.api-client:google-api-client-android:1.20.0'
-    compile 'com.google.api-client:google-api-client-gson:1.20.0'
-    compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
+    implementation 'com.google.api-client:google-api-client:1.20.0'
+    implementation 'com.google.api-client:google-api-client-android:1.20.0'
+    implementation 'com.google.api-client:google-api-client-gson:1.20.0'
+    implementation 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
 
-    compile 'com.android.support:multidex:1.0.0'
-    compile 'com.google.code.gson:gson:2.7'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.1'
+    implementation 'com.android.support:multidex:1.0.0'
+    implementation 'com.google.code.gson:gson:2.7'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-    compile 'org.apmem.tools:layouts:1.10@aar'
-    compile 'com.yalantis:ucrop:2.1.1'
-    compile 'com.getbase:floatingactionbutton:1.10.1'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    implementation 'org.apmem.tools:layouts:1.10@aar'
+    implementation 'com.yalantis:ucrop:2.1.1'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
 //  compile 'life.knowledge4:k4l-video-trimmer:1.0'
-    compile 'io.tus.java.client:tus-java-client:0.3.1'
-    compile 'io.tus.android.client:tus-android-client:0.1.4'
-    compile 'com.afollestad:easyvideoplayer:0.3.0'
-    compile 'commons-io:commons-io:2.4'
-    compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
-    compile 'q.rorbin:badgeview:1.1.0'
-    compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.facebook.android:facebook-android-sdk:4.38.1'
-    compile 'com.facebook.android:audience-network-sdk:5.1.0'
-    compile 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
-    compile 'com.mixpanel.android:mixpanel-android:5.+'
-    compile 'com.facebook.fresco:fresco:1.10.0'
-    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
-    compile 'com.github.florent37:diagonallayout:1.0.9'
-    compile 'com.github.irshulx:laser-native-editor:2.3.1'
-    compile 'com.facebook.android:account-kit-sdk:4.+'
-    compile 'com.github.linger1216:labelview:v1.1.2'
-    compile 'com.googlecode.mp4parser:isoparser:1.1.20'
-    compile 'com.google.android.exoplayer:exoplayer:r2.5.1'
-    compile 'io.branch.sdk.android:library:3.+'
-    compile 'io.reactivex.rxjava2:rxjava:2.2.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    compile 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    implementation 'io.tus.java.client:tus-java-client:0.3.1'
+    implementation 'io.tus.android.client:tus-android-client:0.1.4'
+    implementation 'com.afollestad:easyvideoplayer:0.3.0'
+    implementation 'commons-io:commons-io:2.4'
+    implementation 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
+    implementation 'q.rorbin:badgeview:1.1.0'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.facebook.android:facebook-android-sdk:4.38.1'
+    implementation 'com.facebook.android:audience-network-sdk:5.1.0'
+    implementation 'com.shuhart.bubblepagerindicator:bubblepagerindicator:1.0.13'
+    implementation 'com.mixpanel.android:mixpanel-android:5.+'
+    implementation 'com.facebook.fresco:fresco:1.10.0'
+    implementation 'com.github.stfalcon:frescoimageviewer:0.5.0'
+    implementation 'com.github.florent37:diagonallayout:1.0.9'
+    implementation 'com.github.irshulx:laser-native-editor:2.3.1'
+    implementation 'com.facebook.android:account-kit-sdk:4.+'
+    implementation 'com.github.linger1216:labelview:v1.1.2'
+    implementation 'com.googlecode.mp4parser:isoparser:1.1.20'
+    implementation 'com.google.android.exoplayer:exoplayer:r2.5.1'
+    implementation 'io.branch.sdk.android:library:3.+'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.11'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.4.1'
 }
 
 //dependencies {
